# Sherlock

./: .gitignore  CMakeLists.txt  Install.cmake  README.md  install.cmake
.cmake/: FindNSIS.cmake
icon/: icon.rc
source/: duplicate_remover.cpp  duplicate_remover.hpp  main.cpp  sherlock.cpp  sherlock.hpp
